--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,32 +17,13 @@
         android:background="#ffffff"
         >
 
-        <LinearLayout
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/title_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:background="#ffffff"
             >
-            <TextView
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="内部存储设备 > "
-                android:textSize="14sp"
-                />
-
-            <TextView
-                android:id="@+id/filePathState_tv"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:scrollHorizontally="true"
-                android:ellipsize="start"
-                android:scrollbars="none"
-                android:textSize="14sp"
-                />
-        </LinearLayout>
+        </android.support.v7.widget.RecyclerView>
 
         <View
             android:layout_width="match_parent"
