--- a/app/src/main/res/layout/list_item_file.xml
+++ b/app/src/main/res/layout/list_item_file.xml
@@ -5,7 +5,9 @@
     android:layout_height="wrap_content"
     android:paddingBottom="5dp"
     android:paddingTop="5dp"
-    android:background="#ffffff"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:background="@drawable/item_selector"
     >
 
     <ImageView
